--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-stylus": "^2.7.0",
     "gulp-uglify": "^3.0.1",
+    "gulp-watch": "^5.0.1",
     "n-zepto": "^1.2.0",
     "rollup": "^0.67.4",
     "rollup-plugin-babel": "^3.",
