--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "@babel/core": "^6.25.0",
+    "@babel/core": "^7.2.0",
     "babel": "^6.23.0",
-    "babel-core": "^7.1.0",
+    "babel-core": "^6.23.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
     "babelrc-rollup": "^3.0.0",
@@ -17,6 +17,7 @@
     "gulp-uglify": "^3.0.1",
     "gulp-watch": "^5.0.1",
     "n-zepto": "^1.2.0",
+    "normalize.css": "^8.0.1",
     "rollup": "^0.67.4",
     "rollup-plugin-babel": "^3.",
     "rollup-plugin-commonjs": "^9.2.0",
