--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "gulp-uglify": "^3.0.1",
     "gulp-watch": "^5.0.1",
     "iosselect": "^1.1.5",
+    "koa": "^2.6.2",
+    "koa-compress": "^3.0.0",
+    "koa-convert": "^1.2.0",
+    "koa-generator": "^1.1.16",
+    "koa-router": "^7.4.0",
+    "koa-static-plus": "^0.1.1",
+    "koa-views": "^6.1.4",
     "n-zepto": "^1.2.0",
     "normalize.css": "^8.0.1",
     "rollup": "^0.67.4",
